[package]
name = "netavark-plugin-pond"
version = "0.1.0"
edition = "2021"
description = "Netavark plugin to create a custom network whose backing underlay is just a kernel namespace with the objective that all containers share the same network infrastructure. This is simpler than the usual bridged broadcast domain where different containers share a single network interface."
repository = "https://github.com/caguado/netavark-plugin-pond"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
